--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
+    "bootstrap": "^5.3.8",
     "openmeteo": "^1.2.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
